# chalk-mcp

./: Cargo.toml  LICENSE  README.md  build.rs  go.mod  main.go  main_test.go
.github/workflows/: go-tests.yml
src/: config.rs  main.rs  proto.rs  server.rs  service.rs
src/services/: deployment_service.rs  mod.rs
