[package]
name = "chalk-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.11", features = ["transport", "prost"] }
prost = "0.12"
prost-types = "0.12"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
http = "0.2"
tower = "0.4"
hyper = "0.14"
futures-core = "0.3"
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.11"